--- a/docs/01/01.md
+++ b/docs/01/01.md
@@ -19,9 +19,9 @@ public class Member {
 
 - 회원 객체를 데이터베이스에 관리할 목적으로 회원용 DAO를 만들어 본다.
 - `MemberDAO::find()`를 개발할 때 보통 다음 순서로 개발한다.
-    1. 회원 조회용 SQL을 작성한다.
-    2. JDBC API를 사용해서 SQL을 실행한다.
-    3. 조회 결과를 Member 객체로 매핑한다.
+  1. 회원 조회용 SQL을 작성한다.
+  2. JDBC API를 사용해서 SQL을 실행한다.
+  3. 조회 결과를 Member 객체로 매핑한다.
 
 ```java
 public class MemberDAO {
@@ -31,9 +31,9 @@ public class MemberDAO {
 
 - 다음으로 회원 조희 기능을 만들어 본다.
 - `MemberDAO::save()`를 개발할 때 보통 다음 순서로 개발한다.
-    1. 회원 등록용 SQL을 작성한다.
-    2. 회원 객체 값을 꺼내서 등록 SQL에 전달한다.
-    3. JDBC API를 사용해서 SQL을 실행한다.
+  1. 회원 등록용 SQL을 작성한다.
+  2. 회원 객체 값을 꺼내서 등록 SQL에 전달한다.
+  3. JDBC API를 사용해서 SQL을 실행한다.
     
 ```java
 public class MemberDAO {
@@ -45,6 +45,113 @@ public class MemberDAO {
 - 비슷하게 회원을 수정하고 삭제하는 기능도 추가해본다.
 - 데이터베이스는 객체 구조와 다른 데이터 중심 구조이므로 개발자가 일일이 변환작업을 해주어야 한다.
 - 문제는 CRUD를 하는 과정에 너무 많은 SQL과 JDBC API를 코드로 작성해야 하며 테이블마다 비슷한 일을 반복해야 한다.
+
+
+## 1.2 SQL에 의존적인 개발
+
+- 모든 기능을 개발했는데 갑자기 회원 연락처도 함께 저장해달라는 요구가 있다고 가정해본다.
+  
+### 등록 코드 변경
+
+- 회원 테이블에 TEL 컬럼을 추가하고 회원 객체에 `tel` 필드를 추가했다.
+
+```java
+public class Member {
+    private String memberId;
+    private String name;
+    private String tel;
+    // ...
+}
+```
+
+- 등록 코드를 변경하기 위해...
+  - INSERT SQL을 수정한다.
+  - 회원 객체의 연락처값을 꺼내 등록 SQL에 전달한다.
+
+### 조회 코드 변경
+
+- 회원 조회 화면을 수정해서 연락처 필드가 출력되도록 한다.
+- 모든 연락처 값이 null로 출력되므로 조회 SQL에 연락처 컬럼을 추가한다.
+- 조회 코드를 변경하기 위해...
+  - 회원 조회용 SQL을 수정한다.
+  - 연락처 조회 결과를 `Member` 객체에 추가로 매핑한다.
+
+### 수정 코드 변경
+
+- 이번엔 연락처가 수정되지 않는 버그가 발견된다.
+- UPDATE SQL에 TEL 컬럼을 추가하지 않아서 그러므로 변경해준다.
+
+### 연관된 객체
+
+- 회원은 어떤 하나의 팀에 반드시 소속되어야 한다는 요구사항이 추가되었다.
+- 팀원이 작업하여 `Member` 객체에 `team` 필드가 추가되었다.
+
+```java
+public class Member {
+    private String memberId;
+    private String name;
+    private String tel;
+    private Team team;
+    // ...
+}
+
+public class Team {
+    private String teamName;
+    // ...
+}
+```
+
+- 소속팀 이름을 출력하기 위해 `member.getTeam().getTeamName()`을 추가했지만 `member.getTeam()`이 항상 null이다.
+- `MemberDAO::findWithTeam(String memberId)`가 추가되어 이를 이용해야지만 연관된 팀을 조회했다.
+- SQL을 확인하여야 원인을 알게 되었고 `findWithTeam()`으로 메서드를 변경해야지만 문제를 해결했다.
+- 여기서 발생하는 문제점은 `Member` 객체가 연관된 `Team` 객체를 사용할 수 있는지 여부가 SQL에 달려있다는 점이다.
+- 이로 인해 데이터 접근 계층을 사용해서 SQL을 숨겨도 어쩔 수 없이 DAO를 열어 확인해야 한다.
+- `Member`나 `Team` 같은 비즈니스 요구사항을 모델링한 객체는 엔티티라 부르는데, 이 같은 상황에선 엔티티를 신뢰할 수 없다.
+- 애플리케이션에서 SQL을 직접 다루면 발생하는 문제점은 다음과 같다.
+  - 진정한 의미의 계층 분할이 어렵다.
+  - 엔티티를 신뢰할 수 없다.
+  - SQL에 의존적인 개발을 피하기 어렵다.
+  
+
+## 1.3 JPA와 문제 해결
+
+- 이를 JPA가 어떻게 해결하는지 알아본다.
+
+### 저장 기능
+
+```
+jpa.persist(member);  // 저장
+```
+
+- 이 메서드를 호출하면 JPA가 객체와 매핑정보를 보고 적절한 INSERT SQL을 생성해서 DB에 전달한다.
+
+### 조회 기능
+
+```
+String memberId = "helloId";
+Member member = jpa.find(Member.class, memberId); // 조회
+```
+
+- JPA가 객체와 매핑정보를 보고 적절한 SELECT SQL을 생성하여 DB에 전달하고 그 결과를 `Member` 객체로 생성/반환한다.
+
+### 수정 기능
+
+```
+Member member = jpa.find(Member.class, memberId);
+member.setName("이름변경"); // 수정
+```
+
+- JPA는 별도 수정 메서드를 제공하지 않는다.
+- 대신 객체를 조회해서 값을 변경만 하면 트랜잭션을 커밋할 떄 DB에 적절한 UPDATE SQL이 전달된다.
+
+### 연괸된 객체 조회
+
+```
+Member member = jpa.find(Member.class, memberId);
+Team team = member.getTeam(); // 연관된 객체 조회
+```
+
+- JPA가 연관된 객체를 사용하는 시점에 적절한 SELECT SQL을 실행한다.
 
 -----
 [Home](./index.md)
