--- a/docs/01/02.md
+++ b/docs/01/02.md
@@ -167,5 +167,76 @@ Member member = jpa.find(Member.class, memberId);
 Team team = member.getTeam();
 ```
 
+
+## 2.3 객체 그래프 탐색
+
+- 객체에서 회원이 소속된 팀을 조회할 떄 참조를 사용해서 찾는데, 이를 **객체 그래프 탐색**이라 한다.
+
+```
+Team team = member.getTeam();
+```
+
+- 객체는 마음껏 객체 그래프를 탐색할 수 있어야 한다.
+  
+```sql
+SELECT M.*, T.*
+FROM MEMBER M
+JOIN TEAM T ON M.TEAM_ID = T.TEAM_ID
+```
+
+```
+member.getOrder();  // null
+```
+
+- 하지만 `MemberDAO`에서 `member` 객체를 조회할 때 위 SQL을 실행해서 회원과 팀 데이터만 조회했다면 다음 객체 그래프는 탐색할 수 없다.
+- SQL을 직접 다루면 처음 실행한 SQL에 따라 객체 그래프 탐색 범위가 정해진다. 이는 큰 제약이다.
+
+```java
+class MemberService {
+    // ...
+    public void process() {
+        Member member = memberDAO.find(memberId);
+        member.getTeam(); // member->team 객체 그래프 탐색이 가능한가?
+        member.getOrder().getDelivery(); // ???
+    }
+}
+```
+
+- 위 코드처럼 `memberDAO`를 통해 `member` 객체를 조회했지만 객체와 연관된 객체 그래프에 대한 탐색 가능 여부는 알 수 없다.
+- 엔티티가 SQL에 논리적으로 종속돼어 발생하는 문제다.
+- 그렇다고 `member`와 연관된 모든 객체를 메모리에 올려두는 것은 현실성이 없고, 상황에 따라 메서드를 만들어야 된다.
+
+### JPA와 객체 그래프 탐색
+
+- JPA를 사용하면 객체 그래프를 마음껏 탐색할 수 있다.
+- JPA는 연관된 객체를 사용하는 시점에 적절한 SELECT SQL을 실행한다.
+- 이 기능은 실체 객체를 사용하는 시점까지 조회를 미룬다하여 **지연 로딩**이라 부른다.
+- JPA는 지연 로딩을 투명(transparent)하게 처리한다.
+
+```
+// 처음 조회 시점에 SELECT MEMBER SQL
+Member member = jpa.find(Member.class, memberId);
+
+Order order = member.getOrder();
+order.getOrderDate(); // Order를 사용하는 시점에 SELECT ORDER SQL
+```
+
+- `Order`를 `Member`와 항상 같이 사용한다면 조인을 통해 미리 불러오는 게 효과적이다.
+- JPA는 연관된 객체를 즉시 함께 조회할지 아니면 사용되는 시점에 조회할지 간단한 설정으로 정의할 수 있다.
+
+
+## 2.4 비교
+
+- 데이터베이스는 기본키의 값으로 각 로우(row)를 구분하지만, 객체는 동일성(identity) 비교와 동등성(equality) 비교를 한다.
+    - 동일성 비교는 `==` 비교다. 객체 인스턴스의 주소 값을 비교한다.
+    - 동등성 비교는 `equals()` 메서드를 사용해 객체 내부 값을 비교한다.
+- 따라서 테이블 로우를 구분하는 방법과 객체를 구분하는 방법엔 차이가 존재한다..
+- 이런 패러다임 불일치 문제를 해결하기 위해 로우를 조회할 떄마다 같은 인스턴스를 반환하도록 구현하기는 쉽지 않다.
+
+### JPA 와 비교
+
+- JPA는 같은 트랜잭션일 때 같은 객체가 조회되는 것을 보장한다.
+- 객체 비교하기는 분산 환경이나 트랜잭션이 달느 상황까지 고려하면 더 복잡해진다.
+
 -----
 [Home](./index.md)
