--- a/docs/07/03.md
+++ b/docs/07/03.md
@@ -240,5 +240,321 @@ em.createQuery("select p.id1, p.id2 from Parent p");
 
 - 복합키에는 `@GeneratedValue`를 사용할 수 없다. 복합키를 구성하는 여러 컬럼 중에 하나에도 사용할 수 없다.
 
+
+## 3.3 복합키: 식별 관계 매핑
+
+- 부모, 자식, 손자까지 계속 기본키를 전달하는 식별 관계를 구성해본다.
+- 식별 관계에서 자식 테이블은 부모 테이블의 기본키를 포함해서 복합키를 구성해야 한다.
+- 먼저 `@IdClass`로 식별 관계를 매핑해본다.
+
+### @IdClass와 식별 관계
+
+```java
+// 부모
+@Entity
+public class Parent {
+    @Id
+    @Column(name = "PARENT_ID")
+    private String id;
+    private String name;
+    // ...
+}
+
+// 자식
+@Entity
+@IdClass(ChildId.class)
+public class Child {
+    @Id
+    @ManyToOne
+    @JoinColumn(name = "PARENT_ID")
+    public Parent parent;
+    
+    @Id
+    @Column(name = "CHILD_ID")
+    private String childId;
+    
+    private String name;
+    
+    // ...
+}
+
+// 자식 ID
+public class ChildId implements Serializable {
+    private String parent;  // Child.parent 매핑
+    private String childId; // Child.childId 매핑
+  
+    // equals, hashCode
+    // ...
+}
+
+// 손자
+@Entity
+@IdClass(GrandChildId.class)
+public class GrandChild {
+    @Id
+    @ManyToOne
+    @JoinColumns({
+            @JoinColumn(name = "PARENT_ID"),
+            @JoinColumn(name = "CHILD_ID")
+    })
+    private Child child;
+    
+    @Id
+    @Column(name = "GRANDCHILD_ID")
+    private String id;
+    
+    private String name;
+    
+    // ...
+}
+
+// 손자 ID
+public class GrandChildId implements Serializable {
+    private ChildId child;  // GrandChild.child 매핑
+    private String id;      // GrandChild.id 매핑
+  
+    // equals, hashCode
+    // ...
+}
+```
+
+- 식별 관계는 기본키와 외래키를 같이 매핑해야 한다.
+- 따라서 식별자 매핑인 `@Id`와 연관관계 매핑인 `@ManyToOne`을 같이 사용하면 된다.
+
+```
+@Id
+@ManyToOne
+@JoinColumn(name = "PARENT_ID")
+public Parent parent;
+```
+
+- `Child` 엔티티의 `parent` 필드를 보면 `@Id`로 기본키를 매핑하면서 `@ManyToOne`과 `@JoinColumn`으로 외래키를 같이 매핑한다.
+
+### @EmbeddedId와 식별 관계
+
+- `@EmbeddedId`로 식별 관계를 구성할 때는 `@MapsId`를 사용해야 한다.
+
+```java
+// 부모
+@Entity
+public class Parent {
+    @Id
+    @Column(name = "PARENT_ID")
+    private String id;
+    private String name;
+    // ...
+}
+
+// 자식
+@Entity
+public class Child {
+    @EmbeddedId
+    private ChildId id;
+    
+    @MapsId("parentId") // ChildId.parentId 매핑
+    @ManyToOne
+    @JoinColumn(name = "PARENT_ID")
+    public Parent parent;
+    
+    private String name;
+    // ...
+}
+
+// 자식 ID
+@Embeddable
+public class ChildId implements Serializable {
+    private String parentId;    // @MapsId("parentId")로 매핑
+    
+    @Column(name = "CHILD_ID")
+    private String id;
+    
+    // equals, hashCode
+    // ...
+}
+
+// 손자
+@Entity
+public class GrandChild {
+    @EmbeddedId
+    private GrandChildId id;
+    
+    @MapsId("childId")  // GrandChildId.childId 매핑
+    @ManyToOne
+    @JoinColumns({
+            @JoinColumn(name = "PARENT_ID"),
+            @JoinColumn(name = "CHILD_ID")
+    })
+    private Child child;
+    
+    private String name;
+    // ...
+}
+
+// 손자 ID
+@Embeddable
+public class GrandChildId implements Serializable {
+    private ChildId childId;    // @MapsId("childId")로 매핑
+    
+    @Column(name = "GRANDCHILD_ID")
+    private String id;
+    
+    // equals, hashCode
+    // ...
+}
+```
+
+- `@EmbeddedId`는 식별 관계로 사용할 연관관계의 속성에 `@MapsId`를 사용하면 된다.
+
+```
+@MapsId("parentId")
+@ManyToOne
+@JoinColumn(name = "PARENT_ID")
+public Parent parent;
+```
+
+- `@IdClass`와 다른 점은 `@MapsId`를 사용한다는 점이다.
+- `@MapsId`는 외래키와 매핑한 연관관계를 기본키에도 매핑하겠다는 뜻이다.
+- `@MapsId`의 속성값은 `@EmbeddedId`를 사용한 식별자 클래스의 기본키 필드를 지정하면 된다.
+
+
+## 3.4 비식별 관계로 구현
+
+- 방금까지 했던 예를 비식별 관계로 변경해본다.
+
+```java
+// 부모
+@Entity
+public class Parent {
+    @Id
+    @GeneratedValue
+    @Column(name = "PARENT_ID")
+    private Long id;
+    private String name;
+    // ...
+}
+
+// 자식
+@Entity
+public class Child {
+    @Id
+    @GeneratedValue
+    @Column(name = "CHILD_ID")
+    private Long id;
+    private String name;
+    
+    @ManyToOne
+    @JoinColumn(name = "PARENT_ID")
+    private Parent parent;
+    // ...
+}
+
+// 손자
+@Entity
+public class GrandChild {
+    @Id
+    @GeneratedValue
+    @Column(name = "GRANDCHILD_ID")
+    private Long id;
+    private String name;
+    
+    @ManyToOne
+    @JoinColumn(name = "CHILD_ID")
+    private Child child;
+    // ...
+}
+```
+
+- 식별 관계의 복합키를 사용한 코드와 비교하면 매핑도 쉽고 코드도 단순하다.
+- 복합키가 없으므로 복합키 클래스를 만들지 않아도 된다.
+
+
+## 3.5 일대일 식별 관계
+
+- 일대일 식별 관계는 자식 테이블의 기본키 값으로 부모 테이블의 기본키 값만 사용한다.
+- 부모 테이블의 기본키가 복합키가 아니면 자식 테이블의 기본키는 복합키로 구성하지 않아도 된다.
+
+```java
+// 부모
+@Entity
+public class Board {
+    @Id
+    @GeneratedValue
+    @Column(name = "BOARD_ID")
+    private Long id;
+    
+    private String title;
+    
+    @OneToOne(mappedBy = "board")
+    private BoardDetail boardDetail;
+    // ...
+}
+
+// 자식
+@Entity
+public class BoardDetail {
+    @Id
+    private Long boardId;
+    
+    @MapsId     // BoardDetail.boardId 매핑
+    @OneToOne
+    @JoinColumn(name = "BOARD_ID")
+    private Board board;
+    
+    private String content;
+    // ...
+}
+```
+
+- `@MapsId`는 `@Id`를 사용해서 식별자로 지정한 `BoardDetail.boardId`와 매핑한다.
+
+```
+public void save() {
+    Board board = new Board();
+    board.setTitle("제목");
+    em.persist(board);
+    
+    BoardDetail boardDetail = new BoardDetail();
+    boardDetail.setContent("내용");
+    boardDetail.setBoard(board);
+    em.persist(boardDetail);
+}
+```
+
+
+## 3.6 식별, 비식별 관계의 장단점
+
+- 데이터베이스 설계 관점에서 보면 다음과 같은 이유로 식별 관계보다는 비식별 관계를 선호한다.
+    - 식별 관계는 부모 테이블의 기본키를 자식 테이블로 전파하면서 자식 테이블의 기본키 컬럼이 점점 늘어난다.
+    - 식별 관계는 2개 이상의 컬럼을 합해서 복합 기본키를 만들어야 하는 경우가 많다.
+    - 식별 관계를 사용할 때 기본키로 비즈니스 의미가 있는 자연키 컬럼을 조합하는 경우가 많다.
+        - 비즈니스 요구사항은 시간이 지남에 따라 변하므로 자식에게 전파되면 변경하기 힘들다. 
+    - 식별 관계는 부모 테이블의 기본키를 자식 테이블의 기본키를 사용하므로 구조가 유연하지 못하다.
+- 객체 관계 매핑의 관점에서 보면 다음과 같은 이유로 비식별 관계를 선호한다.
+    - 일대일 관계를 제외하고 식별 관계는 2개 이상의 컬럼을 묶은 복합 기본키를 사용한다.
+        - JPA에서 복합키는 별도 복합키 클래스를 만들어 사용해야 되므로 노력이 필요하다.
+    - 비식별 관계의 기본키는 주로 대리키를 사용하는데 JPA는 `@GeneratedValue`처럼 대리키를 생성하기 위한 편리한 방법을 제공한다.
+- 식별 관계가 가지는 장점도 있다. 
+    - 기본키 인덱스를 활용하기 좋다. 
+    - 상위 테이블들의 기본 키 컬럼을 자식 테이블들이 가지고 있으므로 특정 상황에 조인 없이 하위 테이블만으로 검색을 완료할 수 있다.
+- 기본키 인덱스를 활용하는 예는 다음과 같다.
+    - 부모 아이디가 A인 모든 자식 조회
+      ```
+      SELECT * FROM CHILD
+      WHERE PARENT_ID = 'A'
+      ```
+    - 부모 아이디가 A고 자식 아이디가 B인 자식 조회
+      ```
+      SELECT * FROM CHILD
+      WHERE PARENT_ID = 'A' AND CHILD_ID = 'B'
+      ```
+- 두 경우 모두 `CHILD` 테이블의 기본키 인덱스를 `PARENT_ID + CHILD_ID`로 구성하면 별도 인덱스를 생성할 필요 없이 기본키 인덱스만 사용해야 된다.
+- ORM 신규 프로젝트 진행시 될 수 있으면 비식별 관계를 사용하고 기본키는 `Long` 타입의 대리키를 사용하는 것이다.
+- 대리키는 비즈니스가 변경돼도 유연한 대처가 가능하다는 장점이 있다.
+- JPA는 `@GeneratedValue`를 통해 간편하게 대리키를 생성할 수 있다. 또한 식별자 컬럼이 하나여서 쉽게 매핑할 수 있다.
+- 식별자의 데이터 타입은 `Long`가 좋은데, `Integer`는 20억이면 끝나기 때문이다.
+- 선택적 비식별 관계보다는 필수적 비식별 관계를 사용하는 것이 좋다.
+    - 선택적 관계는 `NULL`을 허용하므로 조인할 때 외부 조인을 사용해야 한다.
+    - 반면 필수적 관계는 `NOT NULL`로 항상 관계가 있다는 것을 보장하므로 내부 조인만 사용해도 된다.
+
 -----
 [Home](./index.md)
