--- a/docs/10/01.md
+++ b/docs/10/01.md
@@ -15,7 +15,7 @@
     - **네이티브 SQL**: JPA에서 JPQL 대신 직접 SQL을 사용할 수 있다.
 - 다음은 JPA가 공식 지원하지 않지만 알아둘 가치가 있는 것이다.
     - **QueryDSL**: Criteria 쿼리처럼 **JPQL을 편하게 작성하도록 도와주는 빌더 클래스 모음**(비표준 오픈소스)
-    - **JDBC, MyBatis 같은 SQL 매퍼**
+    - **JDBC 직접 사용, 마이바티스 같은 SQL 매퍼 프레임워크 사용퍼**
 
 
 ## 1.1 JPQL 소개
@@ -105,6 +105,66 @@ m.get("username") -> m.get(Member_.username)
 - Criteria가 가진 장점도 많지만 복잡하고 장황하다. 따라서 사용하기 불편하다.
 - 또한 코드가 한눈에 들어오지 않는 단점도 있다.
 
+
+## 1.3 QueryDSL 소개
+
+- QueryDSL은 Criteria처럼 JPQL 빌더 역할을 한다.
+- 장점으로는 코드 기반이며 단순하고 사용하기 쉽다.
+- 또한 JPA 뿐만 아니라 JDO, MongoDB, Java Collection, Lucene, Hibernate Search도 거의 같은 문법으로 지원한다.
+
+```
+// 준비
+JPAQuery query = new JPAQuery(em);
+QMember member = QMember.member;
+
+// 쿼리, 결과조회
+List<Member> members = query.from(member)
+    .where(member.username.eq("kim"))
+    .list(member);
+```
+
+- QueryDSL도 애노테이션 프로세서를 사용해서 쿼리 전용 클래스를 만들어야 한다.
+- `QMember`는 `Member` 엔티티 클래스를 기반으로 생성한 QueryDSL 쿼리 전용 클래스다.
+
+
+## 1.4 네이티브 SQL 소개
+
+- JPA는 SQL을 직접 사용할 수 있는 기능을 제공하는데 이를 **네이티브 SQL**이라 한다.
+- JPQL을 사용해도 가끔은 특정 DB에 의존하는 기능을 사용해야 할 때가 있다.
+    - 오라클 데이터베이스의 `CONNECT BY`
+    - 특정 데이터베이스에서 동작하는 SQL 힌트
+- 이런 표준화되어 있지 않은 기능은 사용할 수 없으므로 이럴 때 네이티브 SQL을 사용하면 된다.
+- 단점으로는 DB에 의존하므로 DB를 변경하면 네이티브 SQL도 수정해야 한다.
+
+```
+String sql = "SELECT ID, AGE, TEAM_ID, NAME FROM MEMBER WHERE NAME = 'kim'";
+List<Member> resultList = em.createNativeQuery(sql, Member.class).getResultList();
+```
+
+
+## 1.5 JDBC 직접 사용, 마이바티스 같은 SQL 매퍼 프레임워크 사용
+
+- 드물지만 JDBC 커넥션을 직접 접근하고 싶다면 JPA 구현체가 제공하는 방법을 사용해야 한다.
+
+```
+// 하이버네이트 JDBC 획득
+Session session = entityManager.unwrap(Session.class);
+session.doWork(new Work() {
+    @Override
+    public void execute(Connection connection) throws SQLException {
+        // work...
+    }
+});
+```
+
+- 먼저 JPA `EntityManager`에서 하이버네이트 `Session`을 구한다.
+- 그리고 `Session::doWork()` 메서드를 호출한다.
+- JDBC나 마이바티스를 JPA와 함께 사용하면 영속성 컨텍스트를 적절한 시점에 **강제로 플러시**해야 한다.
+- JDBC나 SQL 매퍼는 모두 JPA를 우회해서 데이터베이스에 접근한다.
+    - 문제는 JPA를 우회하면 JPA가 이를 인식하지 못한다.
+    - 최악의 경우 영속성 컨텍스트와 데이터베이스를 불일치 상태로 만들어 데이터 무결성을 해친다.
+- 이런 이슈를 해결하는 방법은 JPA를 우회해서 SQL을 실행하기 직전에 **영속성 컨텍스트를 수동으로 플러시해서 DB와 영속성 컨텍스트를 동기화**하면 된다.
+- 스프링 프레임워크를 사용하면 JPA와 마이바티스를 손쉽게 통합할 수 있다.
 
 -----
 [Home](./index.md)
