'JPQL'에 대한 내용 추가

--- a/docs/10/02.md
+++ b/docs/10/02.md
@@ -263,5 +263,176 @@ List<UserDTO> resultList = query.getResultList();
     1. 패키지 명을 포함한 전체 클래스 명을 입력해야 한다.
     2. 순서와 타입이 일치하는 생성자가 필요하다.
     
+
+## 2.4 페이징 API
+
+- 데이터베이스마다 페이징을 처리하는 SQL 문법이 다르다.
+- 따라서 JPA는 페이징을 다음 두 API로 추상화했다.
+    - `setFirstResult(int startPosition)`: 조회 시작 위치(0부터 시작)
+    - `setMaxResults(int maxResult)`: 조회할 데이터 수
+
+```
+TypedQuery<Member> query = 
+    em.createQuery("SELECT m FROM Member m ORDER BY m.username DESC", Member.class);
+
+query.setFristResult(10);   // 11번째 데이터부터
+query.setMaxResults(20);    // 20건의 데이터를
+queyr.getResultList();      // 가져온다
+```
+
+- 위 코드는 11 ~ 30번 데이터를 조회한다.
+- 데이터베이스마다 다른 페이징 처리를 같은 API로 처리할 수 있는 이유는 Dialect 덕분이다.
+- 페이징 SQL을 더 최적화하고 싶다면 JPA가 제공하는 페이징 API가 아닌 네이티브 SQL을 직접 사용해야 한다. 
+
+
+## 2.5 집합과 정렬
+
+- 집합은 집합 함수와 함께 통계 정보를 구할 때 사용된다.
+
+### 집합 함수
+
+| 함수      | 설명                                                                        |
+|----------|---------------------------------------------------------------------------|
+| COUNT    | 결과 수를 구한다. 반환타입: `Long`                                               |
+| MAX, MIN | 최대, 최소 값을 구한다. 문자, 숫자, 날짜 등에 사용                                    |
+| AVG      | 평균값을 구한다. 숫자타입만 사용 가능. 반환타입: `Double`                              |
+| SUM      | 합을 구한다. 숫자타입만 사용 가능. 반환타입: 정수합 `Long`, 소수합: `Double`, `BigInteger`합: `BigInterger`, `BigDecimal`합: `BigDecimal` |
+
+### 집합 함수 사용시 참고사항
+
+- NULL 값은 무시하므로 통계에 잡히지 않는다.
+- 만약 값이 없는데 `SUM`, `AVG`, `MAX`, `MIN` 함수를 사용하면 NULL 값이 된다. 단 `COUNT`는 0이 된다.
+- `DISTINCT`를 집합 함수 안에 사용해서 중복된 값을 제거하고 나서 집합을 구할 수 있다.(`select COUNT{ DISTINCT m.age } from Member m`)
+- `DISTINCT`를 `COUNT`에서 사용할 떄 임베디드 타입은 지원하지 않는다.
+
+### GROUP BY, HAVING
+
+- `GROUP BY`는 통계 데이터를 구할 때 특정 그룹끼리 묶어준다.
+- `HAVING`은 `GROUP BY`와 함께 사용하며, 그룹화한 통계 데이터를 기준으로 필터링한다.
+
+```
+select t.name, COUNT(m.age), SUM(m.age), AVG(m.age), MAX(m.age), MIN(m.age)
+from Member m LEFT JOIN m.team t
+GROUP BY t.name
+HAVING AVG(m.age) >= 10
+```
+
+- 이런 쿼리는 보통 리포팅 쿼리나 통계 쿼리라 한다.
+- 하지만 통계 쿼리는 보통 전체 데이터를 기준으로 처리하므로 실시간으로 사용하기엔 부담이 많다.
+- 결과가 아주 많다면 통계 결과만 저장하는 테이블을 별로로 만들어 두고 사용자가 적은 새벽에 실행해서 그 결과를 보관하는 것이 좋다.
+
+### 정렬(ORDER BY)
+
+- `ORDER BY`는 결과를 정렬할 때 사용한다.
+    - `ASC`: 오름차순(기본값)
+    - `DESC`: 내림차순
+
+## 2.6 JPQL 조인
+
+### 내부 조인
+
+- 내부 조인은 `INNER JOIN`을 사용한다.
+- `INNER`는 생략할 수 있다.
+
+```
+String teamName = "팀A";
+String query = "SELECT m FROM Member m INNER JOIN m.team t WHERE t.name = :teamName";
+
+List<Member> members = em.createQuery(query, Member.class)
+                         .setParameter("teamName", teamName)
+                         .getResultList(); 
+```
+
+```
+-- 생성된 SQL
+SELECT
+  M.ID AS ID,
+  M.AGE AS AGE,
+  M.TEAM_ID AS TEAM_ID,
+  M.NAME AS NAME
+FROM
+  MEMBER M INNER JOIN TEAM T ON M.TEAM_ID=T.ID
+WHERE
+  T.NAME=?
+```
+
+- JPQL 조인의 가장 큰 특징은 **연관 필드**를 사용한다는 것이다. 여기서는 `m.team`이 연관 필드다.
+- 연관 필드는 다른 엔티티와 연관관계를 가지기 위해 사용하는 필드를 말한다.
+- 혹시라도 JPQL을 SQL처럼 사용하면 문법 오류가 발생한다.
+
+```
+SELECT m, t
+FROM Member m JOIN m.team t
+```
+
+- 만약 조인한 두 개의 엔티티를 조회하려면 다음과 같이 JPQL을 작성하면 된다.
+- 서로 다른 타입의 엔티티를 조회했으므로 `TypeQuery`를 사용할 수 없다.
+- 따라서 다음처럼 조회해야 한다.
+
+```
+List<Object[]> result = em.createQuery(query).getResultList();
+
+for (Object[] row : result) {
+    Member member = (Member) row[0];
+    Team team = (Team) row[1];
+}
+```
+
+### 외부 조인
+
+```
+SELECT m
+FROM Member m LEFT [OUTER] JOIN m.team t
+```
+
+- 외부 조인은 기능상 SQL 외부 조인과 같다.
+- `OUTER`는 생략 가능해서 보통 `LEFT JOIN`으로 사용한다.
+
+### 컬렉션 조인
+
+- 일대다 관계나 다대다 관계처럼 컬렉션을 사용하는 곳에 조인하는 것이다.
+    - [회원 -> 팀]으로의 주인은 다대일 조인이면서 단일 값 연관 필드(m.team)를 사용
+    - [팀 -> 회원]은 반대로 일대다 조인이면서 컬렉션 값 연관 필드(m.members)를 사용
+
+```
+SELECT t, m FROM Team t LEFT JOIN t.members m
+```
+
+### 세타 조인
+
+- `WHERE` 절을 사용해서 세타 조인을 할 수 있다.
+- 세타 조인은 내부 조인만 지원한다.
+- 전혀 관계없는 엔티티도 조인할 수 있다.
+
+```
+-- JPQL
+select count(m) from Member m, Team t
+where m.username = t.name
+
+-- SQL
+SELECT COUNT(M.ID)
+FROM
+  MEMBER M CROSS JOIN TEAM T
+WHERE
+  M.USERNAME=T.NAME
+```
+
+### JOIN ON 절(JPA 2.1)
+
+- `ON` 절을 사용하면 조인 대상을 필터링하고 조인할 수 있다.
+- 내부 조인에서는 `WHERE` 절을 사용할 때와 결과가 같으므로, 보통 **외부 조인에서만** 사용한다.
+
+```
+-- JPQL
+select m, t from Member m
+left join m.team on t.name = 'A'
+
+-- SQL
+SELECT m.*, t.* FROM Member m
+LEFT JOIN Team t ON m.TEAM_ID=t.id AND t.name='A'
+```
+
+- SQL 결과를 보면 `and t.name='A'`로 조인 시점에 조인 대상을 필터링한다.
+
 -----
 [Home](./index.md)
