'JPQL'에 대한 내용 추가

--- a/docs/10/02.md
+++ b/docs/10/02.md
@@ -434,5 +434,233 @@ LEFT JOIN Team t ON m.TEAM_ID=t.id AND t.name='A'
 
 - SQL 결과를 보면 `and t.name='A'`로 조인 시점에 조인 대상을 필터링한다.
 
+
+## 2.7 페치 조인
+
+- SQL에는 없지만 JPQL에서 성능 최적화를 위해 제공하는 기능이다.
+- 연관된 엔티티나 컬렉션을 한 번에 같이 조회하는 기능이다.
+
+```
+페치 조인 ::= [ LEFT [OUTER] | INNER ] JOIN FETCH 조인경로
+```
+
+### 엔티티 페치 조인
+
+```
+select m
+from Member m join fetch m.team
+```
+
+- 위는 페치 조인을 사용해서 회원 엔티티를 조회하면서 연관된 팀 엔티티도 함께 조회하는 JPQL이다.
+- 이렇게 하면 연관된 엔티티나 컬렉션을 함께 조회한다. 여기선 회원(m)과 팀(m.team)을 함께 조회한다.
+- 일반적인 JPQL 조인과는 다르게 `m.team` 다음에 별칭이 없는데, 페치 조인은 별칭을 사용할 수 없다.
+
+```
+-- 실행된 SQL
+SELECT
+  M.*, T.*
+FROM MEMBER M
+INNER JOIN TEAM T ON M.TEAM_ID=T.ID
+```
+
+- `select m`만으로 연관된 팀도 함께 조회된 것을 확인할 수 있다.
+- 회원과 팀을 지연 로딩으로 설정했어도, 함께 조회했으므로 지연 로딩이 일어나지 않는다.
+- 즉 프록시가 아닌 실제 엔티티이므로 회원 엔티티가 영속성 컨텍스트에서 분리돼 준영속 상태가 되어도 연관된 팀을 조회할 수 있다.
+
+### 컬렉션 페치 조인
+
+```
+-- 일대다 관계인 컬렉션을 페치 조인
+select t
+from Team t join fetch t.members
+where t.name = '팀A'
+
+-- 실행된 SQL
+SELECT
+  T.*, M.*
+FROM TEAM T
+INNER JOIN MEMBER M ON T.ID=M.TEAM_ID
+WHERE T.NAME = '팀A'
+```
+
+- `TEAM` 테이블에 '팀A'는 하나지만 `MEMBER` 테이블과 조인해서 결과가 증가했다.
+- 따라서 팀A는 같은 객체를 가진 2건이 검색된다.
+
+### 페치 조인과 DISTINCT
+
+- JPQL의 `DISTINCT` 명령어는 SQL에 DISTINCT를 추가하는 것은 물론, 애플리케이션에서 한 번 더 중복을 제거한다.
+
+```
+-- 이전 쿼리에 distinct 추가
+select distinct t
+from Team t join fetch t.members
+where t.name = '팀A'
+```
+
+- SQL에선 `DISTINCT`가 추가되지만 실제론 각 로우 데이터가 달라 효과가 없다.
+- 다음으로 애플리케이션에서 중복된 데이터를 걸러낸다.
+    - `select distinct t`는 팀 엔티티의 중복을 제거하라는 것이다.
+    - 따라서 중복인 A팀은 하나만 나오게 된다.
+  
+### 페치 조인과 일반 조인의 차이
+
+- 페치 조인을 사용하지 않고 조인만 사용하면 어떻게 될까?
+
+```
+-- 내부 조인 JPQL
+select t
+from Team t join t.members m
+where t.name = '팀A'
+
+-- 실행된 SQL
+SELECT
+  T.*
+FROM TEAM T
+INNER JOIN MEMBER M ON T.ID=M.TEAM_ID
+WHERE T.NAME = '팀A'
+```
+
+- 실행된 SQL을 보면 팀만 조회하고 조인했던 회원은 전혀 조회하지 않는다.
+- JPQL은 결과를 반환할 떄 연관관계까지 고려하지 않는다. 단지 SELECT 절에 지정한 엔티티만 조회할 뿐이다.
+
+```
+-- 컬렉션 페치 조인 JPQL
+select t
+from Team t join fetch t.members
+where t.name = '팀A'
+
+-- 실행된 SQL
+SELECT
+  T.*, M.*
+FROM TEAM T
+INNER JOIN MEMBER M ON T.ID=M.TEAM_ID
+WHERE T.NAME = '팀A'
+```
+
+- 반면 페치 조인을 사용하면 연관된 엔티티도 함께 조회한다.
+
+### 페치 조인의 특징과 한계
+
+- SQL 한 번으로 연관된 엔티티를 함께 조회할 수 있어서 성능을 최적화 할 수 있다.
+- 페치 조인은 글로벌 로딩 전략보다 우선한다.
+    - **글로벌 로딩 전략**이란 엔티티에 직접 적용하여 애플리케이션 전체에 영향을 미치는 것을 뜻한다.
+    - `@OneToMany(fetch = FetchType.LAZY)`
+- 최적화를 위해 글로벌 로딩 전략을 즉시 로딩으로 설정하면 자주 사용하지 않는 엔티티를 자주 로딩하게 된다.
+    - 이는 오히려 성능에 악영향을 미칠 수 있다.
+    - 따라서 글로벌 로딩 전략은 되도록 지연 로딩을 사용하고 필요할 때 페치 조인을 적용하는 것이 효과적이다.
+- 페치 조인은 다음과 같은 한계가 있다. (구현체에 따라 다르다)
+    - 페치 조인 대상에는 별칭을 줄 수 없다.
+    - 둘 이상의 컬렉션을 페치할 수 없다.
+    - 컬렉션을 페치 조인하면 페이징 API를 사용할 수 없다.
+  
+
+## 2.8 경로 표현식
+
+```
+select m.username
+from Member m
+    join m.team t
+    join m.orders o
+where t.name = '팀A'
+```
+
+- 경로 표현식이란 `.`을 찍어 객체 그래프를 탐색하는 것이다.
+- 위에서 `m.username`, `m.team`, `m.orders`, `t.name`이 모두 경로 표현식을 사용한 예다.
+
+### 경로 표현식의 용어 정리
+
+- 경로 표현식을 이해하려면 우선 다음 용어를 알아야 한다.
+    - 상태 필드(state field): 단순히 값을 저장하기 위한 필드(필드 or 프로퍼티)
+    - 연관 필드(association field): 연관관계를 위한 필드, 임베디드 타입 포함(필드 or 프로퍼티)
+        - 단일 값 연관 필드: `@ManyToOne`, `@oneToOne`, 대상이 엔티티
+        - 컬렉션 값 연관 필드: `@OneTomany`, `@ManyToMany`, 대상이 컬렉션
+
+
+```java
+@Entity
+public class Member {
+    @Id
+    @GeneratedValue
+    private Long id;
+    
+    @Column(name = "name")
+    private String username;    // 상태 필드
+    private Iteger age;         // 상태 필드
+    
+    @ManyToOne
+    private Team team;          // 연관 필드 (단일 값 연관 필드)
+  
+    @OneToMany
+    private List<Order> orders; // 연관 필드 (컬렉션 값 연관 필드)
+}
+```
+
+### 경로 표현식과 특징
+
+- 경로 표현식으로 경로 탐색을 하려면 다음 3가지 경로에 따라 어떤 특징이 있는지 이해해야 한다.
+    - **상태 필드 경로**: 경로 탐색의 끝이다. 더는 탐색할 수 없다.
+    - **단일 값 연관 경로**
+        - 묵시적으로 **내부 조인**이 일어난다.
+        - 계속 탐색할 수 있다.
+    - **컬렉션 값 연관 경로**
+        - 묵시적으로 **내부 조인**이 일어난다.
+        - 더는 탐색할 수 없다.
+        - 단 `FROM` 절에서 조인을 통해 별칭을 얻으면 별칭으로 탐색할 수 있다.
+
+#### 상태 필드 경로 탐색
+
+```
+-- JPQL
+select m.username, m.age from Member m
+
+-- SQL
+select m.name, m.age
+from Member m
+```
+
+- JPQL의 `m.username`, `m.age`는 상태 필드 경로 탐색이다.
+
+
+#### 단일 값 연관 경로 탐색
+
+```
+-- JPQL
+select o.member from Order o
+
+-- SQL
+select m.*
+from Orders o
+    inner join Member m on o.member_id=m.id
+```
+
+- 단일 값 연관 필드로 경로 탐색을 하면 SQL에서 내부 조인이 일어난다.
+    - 이를 **묵시적 조인**이라 한다. 이는 모두 내부 조인이다.
+- 외부 조인은 명시적으로 `JOIN` 키워드를 사용해야 한다.
+    - 명시적 조인: `JOIN`을 직접 적어주는 것
+        ```SELECT m FROM Member m JOIN m.team t```
+    - 묵시적 조인: 경로 표현식에 의해 묵시적으로 조인이 일어나는 것. 내부 조인만 가능.
+        ```SELECT m.team FROM Member m```
+
+#### 컬렉션 값 연관 경로 탐색
+
+- JPQL을 다루면서 많이 하는 실수 중 하나는 컬렉션 값에서 경로 탐색을 시도하는 것이다.
+
+```
+select t.members from Team t          // 성공
+select t.members.username from Team t // 실패
+```
+
+- 컬렉션에서 경로 탐색을 하고 싶으면 다음 코드처럼 조인을 사용해서 새로운 별칭을 획득해야 한다.
+
+```
+select m.username from Team t join t.members m
+```
+
+### 경로 탐색을 사용한 묵시적 조인 시 주의사항
+
+- 항상 내부 조인이다.
+- 컬렉션은 경로 탐색의 끝이다. 컬렉션에서 경로 탐색을 하려면 명시적으로 조인해서 별칭을 얻어야 한다.
+- 경로 탐색은 주로 `SELECT`, `WHERE` 절에서 사용하지만 묵시적 조인으로 인해 SQL의 `FROM` 절에 영향을 준다.
+
 -----
 [Home](./index.md)
