'JPQL'에 대한 내용 추가

--- a/docs/10/02.md
+++ b/docs/10/02.md
@@ -662,5 +662,63 @@ select m.username from Team t join t.members m
 - 컬렉션은 경로 탐색의 끝이다. 컬렉션에서 경로 탐색을 하려면 명시적으로 조인해서 별칭을 얻어야 한다.
 - 경로 탐색은 주로 `SELECT`, `WHERE` 절에서 사용하지만 묵시적 조인으로 인해 SQL의 `FROM` 절에 영향을 준다.
 
+
+## 2.9 서브 쿼리
+
+- JPQL에서도 서브 쿼리를 지원하지만 `WHERE`, `HAVING` 절에서만 사용 가능하다.
+
+```
+-- 나이가 평균보다 많은 회원 찾기
+select m from Member m
+where m.age > (select avg(m2.age) from Member m2)
+
+-- 한 건이라도 주문한 고객 찾기
+select m from Member m
+where (select count(o) from Order o where m = o.member) > 0
+```
+
+### 서브쿼리 함수
+
+- 서브쿼리는 다음 함수들과 같이 사용할 수 있다.
+    - [NOT] EXISTS
+    - { ALL | ANY | SOME }
+    - [NOT] IN
+
+#### EXISTS
+
+- 문법: [NOT] EXISTS
+- 설명: 서브쿼리에 결과가 존재하면 참이다. NOT은 반대
+
+```
+select m from Member m
+where exists (select t from m.team t where t.name = '팀A')
+```
+
+#### { ALL | ANY | SOME }
+
+- 문법: { ALL | ANY | SOME }
+- 설명: 비교 연산자와 같이 사용한다.
+
+```
+-- 전체 상품 각각의 재고보다 주문량이 많은 주문들
+select o from Order o
+where o.orderAmount > ALL (select p.stockAmount from Product p)
+
+-- 어떤 팀이든 팀에 소속된 회원
+select m from Member m
+where m.team = ANY (select t from Team t)
+```
+
+#### IN
+
+- 문법: IN
+- 설명: 서브쿼리 결과 중 하나라도 같은 것이 있으면 참이다.
+
+```
+-- 20세 이상을 보유한 팀
+select t from Team t
+where t IN (select t2 from Team t2 JOIN t2.members m2 where m2.age >= 20)
+```
+
 -----
 [Home](./index.md)
