'JPQL'에 대한 내용 추가

--- a/docs/10/02.md
+++ b/docs/10/02.md
@@ -720,5 +720,222 @@ select t from Team t
 where t IN (select t2 from Team t2 JOIN t2.members m2 where m2.age >= 20)
 ```
 
+
+## 2.10 조건식
+
+### 타입 표현
+
+- JPQL에서 사용하는 타입은 다음과 같이 표현한다. 대소문자는 구분하지 않는다.
+
+| 종류      | 설명                                            | 예제                           |
+|----------|------------------------------------------------|-------------------------------|
+| 문자      | 작은 따옴표 사이에 표현. 작은 따옴표 자체는 연속 두 개로 표현 | 'HELLO', 'She''s'             |
+| 숫자      | L(Long), D(Double), F(Float)                   | 10L, 10D, 10F                |
+| 날짜      | DATE {d'yyyy-mm-dd'}                           | {d'2012-03-24'}              |
+|          | TIME {t'hh-mm-ss'}                            | {t'10-11-11'}                 |
+|          | DATETIME {ts'yyyy-mm-dd hh:mm:ss.f'}          | {ts'2012-03-24 10-11-11.123'} |
+| 부울      | TRUE, FALSE                                    |                              |
+| Enum     | 패키지명을 포함한 전체 이름을 사용해야 한다               | jpabook.MemberType.Admin      |
+| 엔티티 타입 | 엔티티의 타입을 표현한다. 주로 상속 관련하여 사용           | TYPE(m) = Member             |
+
+### 연산자 우선 순위
+
+1. 경로 탐색 연산 (.)
+2. 수학 연산: +, -(단항 연산자), *, /, +, -
+3. 비교 연산: =, >, >=, <, <=, <>, BETWEEN, LIKE, IN, IS NULL, IS EMPTY, MEMBER, EXISTS
+4. 논리 연산: NOT, AND, OR
+
+### 논리 연산과 비교식
+
+#### 논리 연산
+
+- AND: 둘 다 만족하면 참
+- OR: 둘 중 하나만 만족해도 참
+- NOT: 조건식의 결과 반대
+
+#### 비교식
+
+- = | > | >= | < | <= | <>
+
+### Between, IN, Like, NULL 비교
+
+#### Between 식
+
+- 문법: X [NOT] BETWEEN A AND B
+- 설명: X는 A ~ B 사이의 값이면 참 (A, B 포함)
+
+```
+- 나이가 10 ~ 20인 회원 찾기
+select m from Member m
+where m.age between 10 and 20
+```
+
+#### IN 식
+
+- 문법: X [NOT] IN
+- 설명: X와 같은 값이 예제에 하나라도 있으면 참
+
+```
+- 회원1이나 회원2인 회원을 찾기
+select m from Member m
+where m.username in ('회원1', '회원2')
+``` 
+
+#### Like 식
+
+- 문법: [NOT] LIKE 패턴값 [ESCAPE 이스케이프문자] 
+- 설명: 문자표현식과 패턴값읇 비교한다
+    - `%`: 아무 값들이 입력되어도 된다
+    - `_`: 한 글자는 아무 값이 입력되어도 되지만 값이 있어야 한다
+
+```
+-- 중간에 원이란 단어가 들어간 회원
+select m from Member m
+where m.username like '%원%'
+
+-- 회원A, 회원1
+select m from Member m
+where m.username like '회원_'
+```
+
+#### NULL 비교식
+
+- 문법: {단일값 경로 | 입력 파라미터} IS [NOT] NULL
+- 설명: NULL인지 비교한다. NULL은 꼭 IS NULL을 사용해야 한다.
+
+```
+where m.username is null
+```
+
+### 컬렉션 식
+
+- 컬렉션 식은 컬렉션에만 사용하는 특별한 기능이다.
+- 컬렉션은 컬렉션 식 이외에 다른 식은 사용할 수 없다.
+
+#### 빈 컬렉션 비교 식
+
+- 문법: {컬렉션 값 연관 경로} IS [NOT] EMPTY
+- 설명: 컬렉션에 값이 비었으면 참
+
+```
+-- JPQL: 주문이 하나라도 있는 회원 조회
+select m from Member m
+where m.orders is not empty
+
+-- SQL
+select m.* from Member m
+where
+    exists (
+        select o.id
+        from Orders o
+        where m.id=o.member_id
+    )
+```
+
+- 컬렉션 식은 컬렉션에서만 사용할 수 있다.
+
+#### 컬렉션의 멤버 식
+
+- 문법: {엔티티나 값} [NOT] MEMBER [OF] (컬렉션 값 연관 경로)
+- 설명: 엔티티나 값이 컬렉션에 포함되어 있으면 참
+
+```
+select t from Team t
+where :memberParam member of t.members
+```
+
+### 스칼라 식
+
+- 스칼라는 숫자, 문자, 날짜, case, 엔티티 타입 같은 가장 기본적인 타입을 말한다.
+
+#### 수학 식
+
+- `+`, `-`: 단항 연산자
+- `*`, `/`, `+`, `-`: 사칙연산
+
+#### 문자함수
+
+- `CONCAT(문자1, 문자2, ...)`
+    - 문자를 합한다.
+- `SUBSTRING(문자, 위치, [길이])`
+    - 위치부터 시작해 길이만큼 문자를 구한다.
+    - 길이 값이 없으면 나머지 전체 길이를 뜻한다
+- `TRIM([[LEADING | TRAILING | BOTH] [트림 문자] FROM] 문자)`
+    - `LEADING`: 왼쪽만
+    - `TRAILING`: 오른쪽만
+    - `BOTH`: 양쪽 다 (기본값)
+    - 트림 문자를 제거한다.
+    - 트림 문자의 기본값은 공백(SPACE)다.
+- `LOWER(문자)`
+    - 소문자로 변경
+- `UPPER(문자)`
+    - 대문자로 변경
+- `LENGTH(문자)`
+    - 문자 길이
+- `LOCATE(찾을 문자, 원본 문자, [검색시작위치])`
+    - 검색위치부터 문자를 검색하낟.
+    - 1부터 시작, 못 찾으면 0 반환
+
+#### 수학함수
+
+- `ABS(수학식)`
+    - 절대값을 구한다.
+- `SQRT(수학식)`
+    - 제곱근을 구한다.
+- `MOD(수학식, 나눌수)`
+    - 나머지를 구한다.
+- `SIZE(컬렉션 값 연관 경로식)`
+    - 컬렉션의 크기를 구한다.
+- `INDEX(별칭)`
+    - LIST 타입의 컬렉션의 위치값을 구함.
+    - 단 컬렉션이 `@OrderColumn`을 사용하는 LIST 타입일 때만 사용 가능.
+    
+#### 날짜함수
+
+- `CURRENT_DATE`: 현재 날짜
+- `CURRENT_TIME`: 현재 시간
+- `CURRENT_TIMESTAMP`: 현재 날짜 시간
+
+### CASE 식
+
+- 특정 조건에 따라 분기할 때 `CASE` 식을 사용한다.
+    - 기본 `CASE`
+    - 심플 `CASE`
+    - `COALESCE`
+    - `NULLIF`
+    
+#### 기본 CASE
+
+```
+CASE
+    {WHEN <조건식> THEN <스칼라식>}+
+    ELSE <스칼라식>
+END
+```
+
+#### 심플 CASE
+
+- 조건식을 사용할 수 없지만 문법이 단순하다.
+- 자바의 `switch case` 문과 비슷하다.
+
+```
+CASE <조건대상>
+    {WHEN <스칼라식1> THEN <스칼라식2>}+
+    ELSE <스칼라식>
+END
+```
+
+#### COALESCE
+
+- 문법: `COALESCE (<스칼라식> {, <스칼라식>}+)`
+- 설명: 스칼라식을 차례대로 조회해서 `null`이 아니면 반환한다.
+
+#### NULLIF
+
+- 문법: `NULLIF(<스칼라식>, <스칼라식>)`
+- 설명: 두 값이 같으면 `null`을 반환하고 다르면 첫 번쨰 값을 반환한다. 보통 집합 함수와 함께 사용한다.
+
+```select NULLIF(m.username, '관리자') from Member m```
+
 -----
 [Home](./index.md)
