--- a/docs/10/02.md
+++ b/docs/10/02.md
@@ -937,5 +937,295 @@ END
 
 ```select NULLIF(m.username, '관리자') from Member m```
 
+
+## 2.11 다형성 쿼리
+
+- JPQL로 부모 엔티티를 조회하면 그 자식 엔티티도 함께 조회한다.
+- 단일 테이블 전략(`InheritanceType.SINGLE_TABLE`)을 사용할 떄 실행되는 SQL은 다음과 같다.
+
+```
+-- SQL
+SELECT * FROM Item
+```
+
+- 조인 전략(`InheritanceType.JOINED`)을 사용할 때 실행되는 SQL은 다음과 같다.
+
+```
+-- SQL
+SELECT
+  i.ITEM_ID, i.DTYPE, i.name, i.price, i.stockQuantity,
+  b.author, b.isbn,
+  a.artist, a.etc,
+  m.actor, m.director
+FROM
+  Item i
+LEFT OUTER JOIN
+  Book b on i.ITEM_ID=b.ITEM_ID
+LEFT OUTER JOIN
+  Album a on i.ITEM_ID=a.ITEM_ID
+LEFT OUTER JOIN
+  Movie m on i.ITEM_ID=m.ITEM_ID
+```
+
+### TYPE
+
+- 엔티티의 상속 구조에서 조회 대상을 특정 자식 타입으로 한정할 때 주로 사용한다.
+
+```
+-- Item 중에 Book, Movie를 조회하라
+
+-- JPQL
+select i from Item i
+where type(i) IN (Book, Movie)
+
+-- SQL
+SELECT i FROM Item i
+WHERE i.DTYPE in ('B', 'M')
+```
+
+### TREAT(JPA 2.1)
+
+- JPA 2.1에서 추가된 기능으로, 자바의 타입 캐스팅과 비슷하다.
+- 상속 구조에서 부모 타입을 특정 자식 타입으로 다룰 때 사용한다.
+
+```
+-- JPQL
+select i from Item i where treat(i as Book).author = 'kim'
+
+-- SQL
+select i.* from Item i
+where
+  i.DTYPE='B'
+  and i.author='kim'
+```
+
+## 2.12 사용자 정의 함수 호출(JPA 2.1)
+
+```
+-- 예) function(펑션 이름, [인자])
+select function('group_concat', i.name) from Item i
+```
+
+- 하이버네이트 구현체를 사용하면 방언 클래스를 상속해서 구현하고 사용할 데이터베이스 함수를 미리 등록해야 한다.
+
+```java
+public class MyH2Dialect extends H2Dialect {
+    public MyH2Dialect() {
+        registerFunction("group_concat", 
+                new StandardSQLFunction("group_concat", StandardBasicTypes.STRING));
+    }
+}
+```
+
+- 그리고 `hibernate.dialect`에 해당 방언을 등록해야 한다.
+
+```
+<property name="hibernate.dialect" value="hello.MyH2Dialect" />
+```
+
+- 하이버네이트 구현체를 사용하면 다음과 같이 축약해야 사용할 수 있다.
+
+```
+select group_function(i.name) from Item i
+```
+
+## 2.13 기타 정리
+
+- `enum`은 `=` 비교 연산만 지원한다.
+- 임베디드 타입은 비교를 지원하지 않는다.
+
+### EMPTY STRING
+
+- JPA 표준은 `''`(싱글 쿼테이션 2개)을 길이 0인 Empty String으로 정했다.
+- 하지만 데이터베이스에 따라 `NULL`로 사용하는 경우가 있으므로 확인하고 사용해야 한다.
+
+### NULL 정의
+
+- 조건을 만족하는 데이터가 하나도 없으면 `NULL`이다.
+- `NULL`은 알 수 없는 값(unknown value)이다. `NULL`과의 모든 수학적 계산은 `NULL`이 된다.
+- `NULL == NULL`은 알 수 없는 값이다.
+- `NULL is NULL`은 참이다.
+- JPA 표준 명세는 `NULL(U)`, `TRUE(T)`, `FALSE(F)`의 논리 계산을 다음과 같이 정의했다.
+
+| AND | T | F | U |
+|-----|---|---|---|
+| T   | T | F | U |
+| F   | F | F | F |
+| U   | U | F | U |
+
+| OR  | T | F | U |
+|-----|---|---|---|
+| T   | T | T | T |
+| F   | T | F | U |
+| U   | T | U | U |
+
+| NOT |   |
+|-----|---|
+| T   | F |
+| F   | T |
+| U   | U |
+
+
+## 2.14 엔티티 직접 사용
+
+### 기본 키 값
+
+- 객체 인스턴스는 참조 값으로 식별하고 테이블 로우는 기본 키 값으로 식별한다.
+- 따라서 JPQL에서 엔티티 객체를 직접 사용하면 SQL에서는 기본 키 값을 사용한다.
+
+```
+select count(m.id) from Member m    // 엔티티의 아이디
+select count(m) from Member m       // 엔티티
+```
+
+- 두 번째와 같이 엔티티를 직접 사용하면 JPQL이 SQL로 변환될 떄 기본 키를 사용한다.
+- 따라서 실제 실행된 SQL은 둘 다 동일하다.
+
+```
+select count(m.id) as cnt
+from Member m
+```
+
+- 엔티티를 파라미터로 직접 받으면 다음과 같이 된다.
+
+```
+String qlString = "select m from Member m where m = :member";
+List resultList = em.createQuery(qlString)
+                    .setParameter("member", member)
+                    .getResultList();
+```
+
+```
+select m.*
+from Member m
+where m.id=?
+```
+
+### 외래 키 값
+
+- 외래 키를 사용해서 특정 팀에 소속된 회원을 찾는 코드는 다음과 같다.
+
+```
+Team team = em.find(Team.class, 1L);
+
+String qlString = "select m from Member m where m.team = :team";
+List resultList = em.createQuery(qlString)
+                    .setParameter("team", team)
+                    .getResultList();
+```
+
+- 기본 키 값이 `1L`인 팀 엔티티를 파라미터로 사용하므로 SQL은 다음과 같다.
+
+```
+select m.*
+from Member m
+where m.team_id=? (팀 파라미터의 ID 값)
+```
+
+- `MEMBER` 테이블이 `team_id` 외래 키를 가지고 있어 묵시적 조인은 일어나지 않는다.
+- 다만 `m.team.name`을 호출하면 묵시적 조인이 일어난다.
+
+
+## 2.15 Named 쿼리: 정적 쿼리
+
+- JPQL 쿼리는 크게 동적 쿼리와 정적 쿼리로 나눌 수 있다.
+    - **동적 쿼리**
+        - `em.createQuery("...")`처럼 JPQL을 문자로 완성해서 직접 넘기는 쿼리.
+        - 런타임에 특정 조건에 따라 JPQL을 동적으로 구성할 수 있다.
+    - **정적 쿼리**
+        - 미리 정의한 쿼리에 이름을 부여해서 필요할 때 사용할 수 있는데 이를 **Named 쿼리**라 한다.
+        - 한 번 정의하면 변경할 수 없는 정적인 쿼리다.
+- Named 쿼리는 애플리케이션 로딩 시점에 JPQL 문법을 체크하고 미리 파싱한다.
+- 따라서 오류를 빨리 확인할 수 있고, 사용하는 시점에 파싱된 결과를 재사용해 성능상 이점도 있다.
+- 이는 데이터베이스의 조회 성능 최적화에도 도움이 된다.
+- `@NamedQuery` 애노테이션을 이용하거나 XML 문서에 작성할 수 있다.
+
+### Named 쿼리를 애노테이션에 정의
+
+- Named 쿼리는 쿼리에 이름을 부여해서 사용하는 방법이다.
+
+```java
+@Entity
+@NamedQuery(
+        name = "Member.findByUsername",
+        query = "select m from Member m where m.username = :username")
+public class Member {
+    // ...
+}
+```
+
+- `@NamedQuery.name`에 쿼리 이름을 부여하고 `@NamedQuery.query`에 사용할 쿼리를 입력한다.
+
+```
+List<Member> resultList = em.createNamedQuery("Member.findByUsername", Member.class)
+                            .setParameter("username", "회원1")
+                            .getResultList();
+```
+
+- Named 쿼리는 영속성 유닛 단위로 관리되므로 충동을 방지하기 위해 엔티티 이름을 앞에 붙여줘도 된다.
+- 하나의 엔티티에 2개 이상을 정의하려면 `@NamedQueries` 애노테이션을 사용하면 된다.
+
+```java
+@Entity
+@NamedQueries({
+    @NamedQuery(name = "Member.findByUsername",
+            query = "select m from Member m where m.username = :username"),
+    @NamedQuery(name = "Member.count",
+            query = "select count(m) from Member m")
+})
+public class Member {
+    // ...
+}
+```
+
+- `@NamedQuery` 애노테이션은 다음과 같다.
+    - `lockMode`: 쿼리 실행 시 락을 건다.
+    - `hints`: JPA 구현체에게 제공하는 힌트. 예를 들어 2차 캐시를 다룰 때 사용.
+
+```java
+@Target({TYPE})
+public @interface NamedQuery {
+    
+    String name();      // Named 쿼리이름 (필수)
+    String query();     // JPQL 정의 (필수)
+    LockModeType lockMode() default None;   // 쿼리 실행 시 락모드를 설정 가능
+    QueryHint[] hints() default {};         // JPA 구현체에 쿼리 힌트 부여
+}
+```
+
+### Named 쿼리를 XML에 정의
+
+- JPA에서 애노테이션으로 작성할 수 있는 건 XML로도 작성 가능하다.
+
+```xml
+<?xml version="1.0" encoding="UTF-8" ?>
+<entity-mappings xmlns="http://java.sun.com/xml/ns/persistence/orm" version="2.1">
+    <named-query name="Member.findByUsername">
+        <query><CDATA[
+            select m
+            from Member m
+            where m.username = :username
+        ]></query>
+    </named-query>
+  
+    <named-query name="Member.count">
+      <query>select count(m) from Member m</query>
+    </named-query>
+</entity-mappings>
+```
+
+- 그리고 정의한 `ormMember.xml`을 인식하도록 `META-INF/persistence.xml`에 다음 코드를 추가해야 한다.
+
+```
+<persistence-unit name="jpabook">
+    <mapping-file>META-INF/ormMember.xml</mapping-file>
+    ...
+```
+
+### 환경에 따른 설정
+
+- 만약 XML과 애노테이션에 같은 설정이 있다면 XML이 우선권을 가진다.
+- 따라서 애플리케이션이 운영 환경에 따라 다른 쿼리를 실행해야 한다면 각 환경에 맞춘 XML을 준비해서 배포하면 된다.
+
 -----
 [Home](./index.md)
