'Criteria'에 대한 내용 추가

--- a/docs/10/03.md
+++ b/docs/10/03.md
@@ -140,5 +140,122 @@ CriteriaQuery<Tuple> cq = cb.createTupleQuery();
 TypedQuery<Tuple> query = em.createQeury(cq);
 ```
 
+
+## 3.3 조회
+
+### 조회 대상을 한 건, 여러 건 지정
+
+- `select`에 조회 대상을 하나만 지정하려면 다음처럼 작성하면 된다.
+
+```
+cq.select(m)  // JPQL: select m
+```
+
+- 조회 대상을 여러 건 지정하려면 `multiselect`를 사용하면 된다.
+
+```
+// JPQL: select m.username, m.age
+cq.multiselect(m.get("username"), m.get("age");
+```
+
+- 여러 건 지정은 다음처럼 `cb.array`를 사용해도 된다.
+
+```
+CriteriaBuilder cb = em.getCriteriaBuilder();
+// JPQL: select m.username, m.age
+cq.select(cb.array(m.get("username"), m.get("age)));
+```
+
+### DISTINCT
+
+- `select`, `multiselect` 다음에 `distinct(true)`를 사용하면 된다.
+
+```
+// JPQL: select distinct m.username, m.age
+cq.multiselect(m.get("username"), m.get("age")).distinct(true);
+```
+
+- 완성된 코드는 다음과 같다.
+
+```
+// JPQL: select distinct m.username, m.age from Member m
+
+CriteriaQuery<Object[]> cq = cb.createQuery(Object[].class);
+Root<Member> m = cq.from(Member.class);
+cq.multiselect(m.get("username"), m.get("age")).distinct(true);
+// cq.select(cb.array(m.get("username"), m.get("age")).distinct(true);  - 위 코드와 같다.
+
+TypedQuery<Object[]> query = em.createQuery(cq);
+List<Object[]> resultList = query.getResultList();
+```
+
+### NEW, construct()
+
+- `select new 생성자()` 구문을 Criteria에서는 `cb.construct(클래스 타입, ...)`로 사용한다.
+
+```
+// JPQL: select new jpabook.domain.MemberDto(m.username, m.age)
+// from Member m
+CriteriaQuery<MemberDTO> cq = cb.createQuery(MemberDTO.class);
+Root<Member> m = cq.from(Member.class);
+
+cq.select(cb.construct(MemberDTO.class, m.get("username"), m.get("age")));
+
+TypedQuery<MemberDTO> query = em.createQuery(cq);
+List<MemberDTO> resultList = query.getResultList();
+```
+
+- JPQL에서는 패키지명을 전부 적어야했으나 Criteria에서는 `MemberDTO.class` 같이 간략하게 쓸 수 있다.
+
+### 튜플
+
+- `Map`과 비슷한 튜플이라는 특별한 반환 객체를 제공한다.
+
+```
+// JPQL: select m.username, m.age from Member m
+
+CriteriaBuilder cb = em.getCriteriaBuilder();
+
+CriteriaQuery<Tuple> cq = cb.createTupleQuery();
+// CriteriaQuery<Tuple> cq = cb.createQuery(Tuple.class); - 위 코드와 동일
+
+Root<Member> m = cq.from(Member.class);
+cq.multiselect(
+    m.get("username").alias("username"),  // 튜플에서 사용할 튜플 명칭 - 1
+    m.get("age").alias("age")
+);
+
+TypedQuery<Tuple> query = em.createQuery(cq);
+List<Tuple> resultList = query.getResultList();
+for (Tuple tuple : resultList) {
+    // 튜플 별칭으로 조회 - 2
+    String username = tuple.get("username", String.class);
+    Integer age = tuple.get("age", Integer.class);
+}
+```
+
+- 튜플을 사용하려면 `cb.createTupleQuery()` 또는 `cb.createQuery(Tuple.class)`로 생성한다.
+    1. 튜플은 튜플의 검색 키로 사용할 튜플 전용 별칭을 필수로 할당해야 한다. `alias()`
+    2. 선언해둔 튜플 별칭으로 데이터를 조회할 수 있다.
+- 튜플은 이름 기반이므로 순서 기반의 `Object[]`보다 안전하다.
+- `tuple.getElements()` 같은 메서드는 현재 튜플의 별칭과 자바 타입도 조회할 수 있다.
+- 튜플을 사용할 떄는 별칭을 필수로 주어야 한다.
+
+```
+CriteriaQuery<Tuple> cq = cb.createTupleQuery();
+Root<Member> m = cq.from(Member.class);
+cq.select(cb.tuple(
+    m.alias("m"),   // 회원 엔티티, 별칭 m
+    m.get("username").alias("username") // 단순 값 조회, 별칭 username
+));
+
+TypedQuery<Tuple> query = em.createQuery(cq);
+List<Tuple> resultList = query.getResultList();
+for (Tuple tuple : resultList) {
+    Member member = tuple.get("m", Member.class);
+    String username = tuple.get("username", String.class);
+}
+```
+
 -----
 [Home](./index.md)
