'Criteria'에 대한 내용 추가

--- a/docs/10/03.md
+++ b/docs/10/03.md
@@ -257,5 +257,91 @@ for (Tuple tuple : resultList) {
 }
 ```
 
+
+## 3.4 집합
+
+### GROUP BY
+
+```
+/*
+    JPQL:
+    select m.team.name, max(m.age), min(m.age)
+    from Member m
+    group by m.team.name
+*/
+
+CriteriaBuilder cb = em.getCriteriaBuilder();
+CriteriaQuery<Object[]> cq = cb.createQuery(Object[].class);
+Root<Member> m = cq.from(Member.class);
+
+Expression maxAge = cb.max(m.<Integer>get("age"));
+Expression minAge = cb.min(m.<Integer>get("age"));
+
+cq.multiselect(m.get("team").get("name"), maxAge, minAge);
+cq.groupBy(m.get("team").get("name"));
+
+TypedQuery<Object[]> query = em.createQuery(cq);
+List<Object[]> resultList = query.getResutList();
+```
+
+### HAVING
+
+- 위 조건에 팀에 가장 나이 어린 사람이 10살을 초과하는 팀을 조회한다는 조건을 추가한다.
+
+```
+cq.multiselect(m.get("team").get("name"), maxAge, minAge)
+  .groupBy(m.get("team").get("name"))
+  .having(cb.gt(minAge, 10));
+```
+
+- `having(cb.gt(minAge, 10))`은 JPQL의 `having min(m.age) > 10`과 같다.
+
+
+## 3.5 정렬
+
+- 정렬 조건도 Criteria 빌더를 통해서 생성한다.
+- `cb.desc(...)` 또는 `cb.asc(...)`로 생성할 수 있다.
+
+```
+cq.select(m)
+  .where(ageGt)
+  .orderBy(cb.desc(m.get("age")));  // JPQL: order by m.age desc
+```
+
+
+## 3.6 조인
+
+- 조인은 `join()` 메서드와 `JoinType` 클래스를 사용한다.
+
+```
+/*
+    JPQL
+    select m, t from Member m
+    inner join m.team t
+    where t.name = '팀A'
+*/
+
+Root<Member> m = cq.from(Member.class);
+Join<Member, Team> t = m.join("team", JoinType.INNER);  // 내부 조인
+
+cq.multiselect(m, t)
+  .where(cb.equal(t.get("name"), "팀A");
+```
+
+- 쿼리 루트(`m`)에서 바로 `m.join("team")` 메서드를 사용해 회원과 팀을 조인했다.
+- 조인한 `team`에 `t`라는 별칭을 주었다. 여기서 `JoinType.INNER`를 설정해서 내부 조인을 사용했다.
+- 조인 타입은 생략하면 내부 조인을 사용한다.
+- 외부 조인은 `JoinType.LEFT`를 설정하면 된다.
+
+```
+// FETCH JOIN은 다음과 같다.
+Root<Member> m = cq.from(Member.class);
+m.fetch("team", JoinType.LEFT);   // <-- fetch join
+
+cq.select(m);
+```
+
+- 페치 조인은 `fetch(조인대상, JoinType)`을 사용한다.
+
 -----
 [Home](./index.md)
