--- a/docs/10/03.md
+++ b/docs/10/03.md
@@ -343,5 +343,166 @@ cq.select(m);
 
 - 페치 조인은 `fetch(조인대상, JoinType)`을 사용한다.
 
+
+## 3.7 서브 쿼리
+
+#### 간단한 서브 쿼리
+
+```
+/*
+    JPQL:
+    select m from Member m
+    where m.age >= (select AVG(m2.age) from Member m2)
+*/
+
+CriteriaBuilder cb = em.getCriteriaBuilder();
+CriteriaQuery<Member> mainQuery = cb.createQuery(Member.class);
+
+// 서브 쿼리 생성 - 1
+Subquery<Double> subQuery = mainQuery.subquery(Double.class);
+Root<Member> m2 = subQuery.from(Member.class);
+subQuery.select(cb.avg(m2.<Integer>get("age")));
+
+// 메인 쿼리 생성 - 2
+Root<Member> m = mainQuery.from(Member.class);
+mainQuery.select(m)
+         .where(cb.ge(m.<Integer>get("age"), subQuery));
+```
+
+- 위 코드는 평균 나이 이상의 회원을 구하는 서브 쿼리다.
+    1. 서브 쿼리는 `mainQuery.subquery()`로 생성한다.
+    2. `where(..., subQuery)`에서 생성한 서브 쿼리를 사용한다.
+  
+#### 상호 관련 서브 쿼리
+
+- 메인 쿼리와 서브 쿼리 간에 서로 관련이 있을 떄 어떻게 Criteria를 작성하는지 알아본다.
+- 서브 쿼리에서 메인 쿼리의 정보를 사용하려면 메인 쿼리에서 사용한 별칭을 얻어야 한다.
+
+```
+.where(cb.equal(subM.get("username"), m.get("username")));
+```
+
+- 다음 코드는 팀 A에 소속된 회원을 찾는 쿼리다.
+
+```
+/*
+    JPQL:
+    select m from Member m
+    where exists (select t from m.team t where t.name='팀A')  
+*/
+
+CriteriaBuilder cb = em.getCriteriaBuilder();
+CriteriaQuery<Member> mainQuery = cb.createQuery(Member.class);
+
+// 서브 쿼리에서 사용되는 메인 쿼리의 m
+Root<Member> m = mainQuery.from(Member.class);
+
+// 서브 쿼리 생성
+Subquery<Team> subQuery = mainQuery.subquery(Team.class);
+Root<Member> subM = subQuery.correlate(m);    // 메인 쿼리의 별칭을 가져옴
+
+Join<Member, Team> t = subM.join("team");
+subQUery.select(t)
+        .where(db.equal(t.get("name"), "팀A"));
+        
+// 메인 쿼리 생성
+mainQuery.select(m)
+         .where(db.exists(subQuery));
+         
+List<Member> resultList = em.createQuery(mainQuery)
+                            .getResultList();
+```
+
+- `correlate()` 메서드를 사용하면 메인 쿼리의 별칭을 서브 쿼리에서 사용할 수 있다.
+
+
+## 3.8 IN 식
+
+```
+/*
+    JPQL:
+    select m from Member m
+    where m.username in ("회원1", "회원2")
+*/
+
+CriteriaBuilder cb = em.getCriteriaBuilder();
+CriteriaQuery<Member> cq = cb.createQuery(Member.class);
+Root<Member> m = cq.from(Member.class);
+
+cq.select(m)
+  .where(cb.in(m.get("username"))
+      .value("회원1")
+      .value("회원2"));
+```
+
+
+## 3.9 CASE 식
+
+- `selectCase()` 메서드와 `when()`, `otherwise()` 메서드를 사용한다.
+
+```
+/*
+    JPQL:
+    select m.username,
+           case
+              when m.age >= 60 then 600
+              when m.age <= 15 then 500
+              else 1000
+           end
+    from Member m
+*/
+
+Root<Member> m = cq.from(Member.class);
+
+cq.multiselect(
+    m.get("username"),
+    cb.selectCase()
+        .when(cb.ge(m.<Integer>get("age"), 60), 600)
+        .when(cb.le(m.<Integer>get("age"), 15), 500)
+        .otherwise(1000)
+);
+```
+
+
+## 3.10 파라미터 정의
+
+```
+/*
+    JPQL
+    select m from Member m
+    where m.username = :usernameParam
+*/
+
+CriteriaBuilder cb = em.getCriteriaBuilder();
+CriteriaQuery<Member> cq = cb.createQuery(Member.class);
+
+Root<Member> m = cq.from(Member.class);
+
+// 정의 - 1
+cq.select(m)
+  .where(cb.equal(
+      m.get("username"), 
+      cb.parameter(String.class, "usernameParam")));
+      
+List<Member> resultList = em.createQuery(cq)
+    .setParameter("usernameParam", "회원1")   // 바인딩 - 2
+    .getResultList();
+```
+
+- 위 코드는 파라미터를 정의한 것이다.
+    1. `cb.parameter(타입, 파라미터 이름)` 메서드를 사용해서 파라미터를 정의했다.
+    2. `setParameter("usernameParam", "회원1")`을 사용해서 해당 파라미터에 사용할 값을 바인딩했다.
+  
+
+## 3.11 네이티브 함수 호출
+
+- 네이티브 SQL 함수를 호출하려면 `cb.function(...)` 메서드를 사용하면 된다.
+
+```
+Root<Member> m = cq.from(Member.class);
+Expression<Long> function = cb.function("SUM", Long.class, m.get("age"));
+cq.select(function);
+```
+
 -----
 [Home](./index.md)
