'Criteria'에 대한 내용 추가

--- a/docs/10/03.md
+++ b/docs/10/03.md
@@ -504,5 +504,221 @@ Expression<Long> function = cb.function("SUM", Long.class, m.get("age"));
 cq.select(function);
 ```
 
+## 3.12 동적 쿼리
+
+- 다양한 검색 조건에 따라 실행 시점에 쿼리를 생성하는 것을 동적 쿼리라 한다.
+- 동적 쿼리는 문자 기반 JPQL보다 Criteria로 작성하는 것이 더 편리하다.
+
+```
+// 1. JPQL로 만들기
+// 검색 조건
+Integer age = 10;
+String username = null;
+String teamName = "팀A";
+
+// JPQL 동적 쿼리 생성
+String Builder jpql = new StringBuilder("select m from Member m join m.team t");
+List<String> criteria = new ArrayList<String>();
+
+if (age != null) criteria.add(" m.age = :age ");
+if (username != null) criteria.add(" m.username = :username ");
+if (teamName != null) criteria.add(" t.name = :teamName ");
+
+if (criteria.size() > 0) jpql.append(" where ");
+
+for (int i = 0; i < criteria.size(); i++) {
+    if (i > 0) jpql.append(" and ");
+    jpql.append(criteria.get(i));
+}
+
+TypedQuery<Member> query = em.createQuery(jpql.toString(), Member.class);
+if (age != null) query.setParameter("age", age);
+if (username != null) query.setParameter("username", username);
+if (teamName != null) query.setParameter("teamName", teamName);
+
+List<Member> resultList = query.getResultList();
+```
+
+- 위 코드는 JPQL로 만들어 본 것이다.
+- 문자 더하기로 인해 여러 가지 버그를 만날 확률이 높다. 특히 공백처리에 신경을 써야 한다.
+
+```
+// 2. Criteria로 만들기
+// 검색 조건
+Integer age = 10;
+String username = null;
+String teamName = "팀A";
+
+// Criteria 동적 쿼리 생성
+CriteriaBuilder cb = em.getCriteriaBuilder();
+CriteriaQuery<Member> cq = cb.createQuery(Member.class);
+
+Root<Member> m = cq.from(Member.class);
+Join<Member, Team> t = m.join("team");
+
+List<Predicate> criteria = new ArrayList<Predicate>();
+
+if (age != null) criteria.add(cb.equal(m.<Integer>get("age"), 
+    cb.parameter(Integer.class, "age")));
+if (username != null) criteria.add(cb.equal(m.<Integer>get("username"), 
+    cb.parameter(String.class, "username")));
+if (teamName != null) criteria.add(cb.equal(m.<Integer>get("name"), 
+    cb.parameter(String.class, "teamName")));
+    
+cq.where(cb.and(criteria.toArray(new Predicate[0]));
+
+TypedQuery<Member> query = em.createQuery(cq);
+if (age != null) query.setParameter("age", age);
+if (username != null) query.setParameter("username", username);
+if (teamName != null) query.setParameter("teamName", teamName);
+
+List<Member> resultList = query.getResultList();
+```
+
+- Criteria로 동적 쿼리를 구성하면 최소한 공백이나 `where`, `and`의 위치로 인한 에러가 발생하지 않는다.
+- 하지만 장황하고 복잡하여 코드를 읽기 힘들다는 점이 있다.
+
+
+## 3.13 함수 정리
+
+- Criteria는 JPQL 빌더 역할을 하므로 JPQL 함수를 코드로 지원한다.
+- 다음은 `Expression`(`m.get("username")`의 반환 타입)의 메서드다.
+  
+| 함수명        | JPQL        |
+|-------------|-------------|
+| isNull()    | IS NULL     |
+| isNotNull() | IS NOT NULL |
+| in()        | IN          |
+
+- JPQL에서 사용하는 함수 대부분은 `CriteriaBuilder`에 정의되어 있다.
+
+##### 조건 함수
+
+| 함수명                         | JPQL                     |
+|------------------------------|--------------------------|
+| and()                        | and                      |
+| or()                         | or                       |
+| not()                        | not                      |
+| equal(), notEqual()          | =, <>                    |
+| lt(), lessThan()             | <                        |
+| le(), lessThanOrEqualTo()    | <=                       |
+| gt(), greaterThan()          | >                        |
+| ge(), greaterThanOrEqualTo() | >=                       |
+| between()                    | between                  |
+| like(), notLike()            | like, not like           |
+| isTrue(), isFalse()          | is true, is false        |
+| in(), not(in())              | in, not(in())            |
+| exists(), not(exists())      | exists, not exists       |
+| isNull(), isNotNull()        | is null, is not null     |
+| isEmpty(), isNotEmpty()      | is empty, is not empty   |
+| isMember(), isNotMember()    | member of, not member of |
+
+##### 스칼라와 기타 함수
+
+| 함수명          | JPQL | 함수명               | JPQL              |
+|---------------|------|--------------------|-------------------|
+| sum()         | +    | length()           | length            |
+| neg(), diff() | -    | locate()           | locate            |
+| prod()        | *    | concat()           | concat            |
+| quot()        | /    | upper()            | upper             |
+| all()         | all  | lower()            | lower             |
+| any()         | any  | substring()        | substring         |
+| some()        | some | trim()             | trim              |
+| abs()         | abs  | currentDate()      | current_date      |
+| sqrt()        | sqrt | currentTime()      | current_time      |
+| mod()         | mod  | currentTimestamp() | current_timestamp |
+| size()        | size |
+
+##### 집합 함수
+
+| 함수명                              | JPQL           |
+|-----------------------------------|----------------|
+| avg()                             | avg            |
+| max(), greatest()                 | max            |
+| min.least()                       | min            |
+| sum(), sumAsLong(), sumAsDouble() | sum            |
+| count()                           | count          |
+| countDistinct()                   | count distinct |
+
+##### 분기 함수
+
+| 함수명         | JPQL     |
+|--------------|----------|
+| nullif()     | nullif   |
+| coalesce()   | coalesce |
+| selectCase() | case     |
+
+
+## 3.14 Criteria 메타 모델 API
+
+- Criteria는 코드 기반이므로 컴파일 시점에 오류를 발견할 수 있다.
+- 하지만 `m.get("age")`에서 `age`는 문자이므로, 문제가 생겨도 컴파일 시점에 잡아낼 수 없다.
+- 따라서 이런 부분까지 코드로 작성하기 위해선 **메타 모델 API**를 사용하면 된다.
+  
+```
+// 메타 모델 API 적용 전
+cq.select(m)
+  .where(cb.gt(m.<Integer>get("age"), 20))
+  .orderBy(cb.desc(m.get("age")));
+
+// 메타 모델 API 적용 후
+cq.select(m)
+  .where(cb.gt(m.get(Member_.age), 20))
+  .orderBy(cb.desc(m.get(Member_.age)));
+```
+
+- 메타 모델 API를 사용하려면 먼저 메타 모델 클래스를 만들어야 한다.
+
+```java
+@Generate(valeu = "org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor")
+@StaticMetamodel(Member.class)
+public abstract class Member_ {
+    public static volatile SingularAttribute<Member, Long> id;
+    public static volatile SingularAttribute<Member, String> username;
+    public static volatile SingularAttribute<Member, Integer> age;
+    public static volatile ListAttribute<Member, Order> orders;
+    public static volatile SingularAttribute<Member, Team> team;
+}
+```
+
+- 위와 같은 클래스는 표준(CANONICAL) 메타 모델 클래스라 하는데 줄여서 메타 모델이라 한다.
+- `Member_` 메타 모델 클래스는 `Member` 엔티티를 기반으로 만들어야 한다.
+- 위와 같은 코드는 개발자가 직접 작성하지 않는다. 코드 자동 생성기가 자동으로 생성해준다.
+- 코드 생성기는 모든 엔티티 클래스를 찾아서 "엔티티명_.java" 모양으로 생성한다.
+
+### 코드 생성기 설정
+
+- 코드 생성기는 보통 메이븐이나 앤트, 그래들 같은 빌드 도구를 사용해서 실행한다.
+
+```xml
+<!-- maven 설정 -->
+<root>
+  <dependencies>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-jpamodelgen</artifactId>
+      <version>1.3.0.Final</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <compilerArguments>
+            <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
+          </compilerArguments>
+        </configuration>
+      </plugin>
+    </plugins>  
+  </build>
+</root>
+```
+
+- `mvn compile` 명령어를 사용하면 `target/generated-sources/annotations/` 하위에 메타 모델 클래스가 생성된다.
+- Criteria를 사용한다면 사용하는 것이 적극 권장된다.
+
 -----
 [Home](./index.md)
