'QueryDSL'에 대한 내용 추가

--- a/docs/10/04.md
+++ b/docs/10/04.md
@@ -132,5 +132,107 @@ public void basic() {
 }
 ```
 
+
+## 4.3 검색 조건 쿼리
+
+```
+// QueryDSL 기본 쿼리 기능
+JPAQuery query = new JPAQuery(em);
+QItem item = QItem.item;
+List<Item> list = query.from(item)
+  .where(item.name.eq("좋은상품").and(item.price.gt(20000)))
+  .list(item);  // 조회할 프로젝션 지정
+```
+
+```
+// 실행된 JPQL
+select item
+from Item item
+where item.name = ?1 and item.price > ?2
+```
+
+- QueryDSL의 `where` 절에는 `and`나 `or`를 사용할 수 있다.
+- 또한 다음처럼 여러 검색 조건을 사용해도 된다.
+
+```
+.where(item.name.eq("좋은상품"), item.price.gt(20000))
+```
+
+- 쿼리 타입의 필드는 필요한 대부분의 메서드를 명시적으로 제공한다.
+
+```
+item.price.between(10000, 20000)
+item.name.contains("상품1")
+item.name.startsWith("고급")
+```
+
+
+## 4.4 결과 조회
+
+- 쿼리 작성이 끝나고 결과 조회 메서드를 호출하면 실제 데이터베이스를 조회한다.
+- 대개 `uniqueResult()`나 `list()`를 사용하고 파라미터로 프로젝션 대상을 넘겨준다.
+- 결과 조회 API는 `com.mysema.query.Projectable`에 정의되어 있다.
+    - `uniqueResult()`
+        - 결과가 한 건이다.
+        - 결과가 없으면 null을 반환한다.
+        - 둘 이상이면 `com.mysema.query.NonUniqueResultException` 예외가 발생한다.
+    - `singleResult()`
+        - `uniqueResut()`와 같지만, 둘 이상이면 처음 데이터를 반환한다.
+    - `list()`
+        - 결과가 둘 이상일 때 사용한다. 결과가 없으면 빈 컬렉션을 반환한다.
+  
+
+## 4.5 페이징과 정렬
+
+```
+QItem item = QItem.item;
+
+query.from(item)
+     .where(item.price.gt(20000))
+     .orderBy(item.price.desc(), item.stockQuantity.asc())
+     .offset(10).limit(20)
+     .list(item);
+```
+
+- 정렬엔 `orderBy`를 사용하며 쿼리 타입(Q)이 제공하는 `asc()`, `desc()`를 사용한다.
+- 페이징은 `offset()`과 `limit()`를 조합해서 사용한다.
+- 페이징은 `restrict()` 메서드에 `com.mysema.query.QueryModifiers`를 파라미터로 사용해도 된다.
+
+```
+QueryModifiers queryModifiers = new QueryModifiers(20L, 10L); // limit, offset
+List<Item> list = query.from(item)
+                       .restrict(queryModifiers)
+                       .list(item);
+```
+
+- 실제 페이징 처리를 하려면 검색된 전체 데이터 수를 알아야 한다.
+- 이땐 `list()` 대신 `listResuts()`를 사용한다.
+
+```
+SearchResults<Item> result = query.from(item)
+                                  .where(item.price.gt(10000))
+                                  .offset(10).limit(20)
+                                  .listResults(item);
+
+long total = result.getTotal();
+long limit = result.getLimit();
+long offset = result.getOffset();
+List<Item> results = result.getResults();
+```
+
+- `listResults()`를 사용하면 전체 데이터 조회를 위해 `count` 쿼리를 한 번 더 실행한다.
+
+
+## 4.6 그룹
+
+- `groupBy`를 사용하고 그룹화된 결과를 제한하려면 `having`을 사용하면 된다.
+
+```
+query.from(item)
+     .groupBy(item.price)
+     .having(item.price.gt(10000))
+     .list(item);
+```
+
 -----
 [Home](./index.md)
