'QueryDSL'에 대한 내용 추가

--- a/docs/10/04.md
+++ b/docs/10/04.md
@@ -234,5 +234,273 @@ query.from(item)
      .list(item);
 ```
 
+
+## 4.7 조인
+
+- `innerJoin(join)`, `leftJoin`, `rightJoin`, `fullJoin`을 사용할 수 있다.
+- 또한 JPQL의 `on`과 성능 최적화를 위한 `fetch` 조인도 사용할 수 있다.
+- 기본 문법은 첫 번째 파라미터에 조인 대상을 지정하고 두 번쨰 파라미터에 별칭을 사용할 쿼리 타입을 지정한다.
+
+```
+// 기본 조인
+QOrder order = QOrder.order;
+QMember member = QMember.member;
+QOrderItem orderItem = QOrderItem.orderItem;
+
+query.from(order)
+     .join(order.member, member)
+     .leftJoin(order.orderItems, orderItem)
+     .list(order);
+```
+
+```
+// 조인 on 사용
+query.from(order)
+     .leftJoin(order.orderItems, orderItems)
+     .on(orderItem.count.gt(2))
+     .list(order);
+```
+
+```
+// 페치 조인 사용
+query.from(order)
+     .innerJoin(order.member, member).fetch()
+     .leftJoin(order.orderItems, orderItem).fetch()
+     .list(order)
+```
+
+```
+// from 절에 여러 조건 사용(세타 조인)
+QOrder order = QOrder.order;
+QMember member = QMember.member;
+
+query.from(order, member)
+     .where(order.member.eq(member))
+     .list(order);
+```
+
+
+## 4.8 서브 쿼리
+
+- 서브 쿼리는 `com.mysema.query.jpa.JPASubQuery`를 생성해 사용한다.
+- 서브 쿼리의 결과가 하나면 `unique()`, 여러 건이면 `list()`를 사용한다.
+
+```
+// 서브 쿼리 예제 - 한 건
+QItem item = QItem.item;
+QItem itemSub = new QItem("itemSub");
+
+query.from(item)
+     .where(item.price.eq(
+            new JPASubQuery().from(itemSub).unique(itemSub.price.max())
+     ))
+     .list(item)
+```
+
+```
+// 서브 쿼리 예제 - 여러 건
+QItem item = QItem.item;
+QItem itemSub = new QItem("itemSub");
+
+query.from(item)
+     .where(item.in(
+            new JPASubQuery().from(itemSub)
+                    .where(item.name.eq(itemSub.name))
+                    .list(itemSub)
+     ))
+     .list(item)
+```
+
+
+## 4.9 프로젝션과 결과 반환
+
+- `select` 절에 조회 대상을 지정하는 것을 **프로젝션**이라 한다.
+
+### 프로젝션 대상이 하나
+
+```
+// 프로젝션 대상이 하나
+QItem item = QItem.item;
+List<String> result = query.from(item).list(item.name);
+
+for (String name : result) {
+    System.out.println("name = " + name);
+}
+```
+
+### 여러 컬럼 반환과 튜플
+
+- 프로젝션 대상으로 여러 필드를 선택하면 기본으로 `com.mysema.query.Tuple`이라는 `Map`과 비슷한 내부 타입을 사용한다.
+- 조회 결과는 `tuple.get()` 메서드에 조회한 쿼리 타입을 지정하면 된다.
+
+```
+QItem item = QItem.item;
+
+List<Tuple> result = query.from(item).list(item.name, item.price);
+// List<Tuple> result = query.from(item).list(new QTuple(item.name, item.price));
+// 둘이 같은 쿼리다
+
+for (Tuple tuple : result) {
+    System.out.println("name = " + tuple.get(item.name));
+    System.out.println("price = " + tuple.get(item.price));
+}
+```
+
+### 빈 생성
+
+- 쿼리 결과를 엔티티가 아닌 특정 객체로 받고 싶다면 빈 생성(Bean population) 기능을 사용한다.
+- QueryDSL은 객체를 생성하는 다양한 방법을 제공한다.
+    - 프로퍼티 접근
+    - 필드 직접 접근
+    - 생성자 사용
+- 원하는 방법을 지정하기 위해 `com.mysema.query.types.Projections`를 사용하면 된다.
+
+```java
+// 예제 ItemDTO
+public class ItemDTO {
+    private String username;
+    private int price;
+    
+    public ItemDTO() {}
+    public ItemDTO(String username, int price) {
+        this.username = username;
+        this.price = price;
+    }
+    
+    // Getter, Setter
+    public String getUsername() { /*...*/ }
+    public void setUsername(String username) { /*...*/ }
+    public int getPrice() { /*...*/ }
+    public void setPrice(int price) { /*...*/ }
+}
+```
+
+```
+// 프로퍼티 접근(Setter)
+QItem item = QItem.item;
+List<ItemDTO> result = query.from(item).list(
+        Projections.bean(ItemDTO.class, item.name.as("username"), item.price));
+```
+
+- `Projections.bean()` 메서드는 수정자를 사용해서 값을 채운다.
+- 쿼리 결과와 매핑할 프로퍼티 이름이 다르면 `as`를 사용해서 별칭을 주면 된다.
+
+```
+// 필드 직접 접근
+QItem item = QItem.item;
+List<ItemDTO> result = query.from(item).list(
+        Projections.fields(ItemDTO.class, item.name.as("username"), item.price));
+```
+
+- `Projections.fields()` 메서드를 사용하면 필드에 직접 접근해서 값을 채워준다.
+- `private`으로 설정해도 동작한다.
+
+```
+// 생성자 사용
+QItem item = QItem.item;
+List<ItemDTO> result = query.from(item).list(
+        Projections.constructor(ItemDTO.class, item.name, item.price));
+```
+
+- `Projections.constructor()` 메서드는 생성자를 사용한다.
+- 지정한 프로젝션과 파라미터 순서가 같은 생성자가 필요하다.
+
+### DISTINCT
+
+```
+query.distinct().from(item)
+```
+
+
+## 4.10 수정, 삭제 배치 쿼리
+
+- QueryDSL에서 배치 쿼리는 JPQL 배치 쿼리와 같이 영속성 컨텍스트를 무시하고 데이터베이스를 직접 쿼리한다.
+
+```
+// 수정 배치 쿼리
+QItem item = QItem.item;
+JPAUpdateClause updateClause = new JPAUpdateClause(em, item);
+long count = updateClause.where(item.name.eq("시골개발자의 JPA 책"))
+                         .set(item.price, item.price.add(100))
+                         .execute();
+```
+
+```
+// 삭제 배치 쿼리
+QItem item = QItem.item;
+JPADeleteClause deleteClause = new JPADeleteClause(em, item);
+long count = deleteClause.where(item.name.eq("시골개발자의 JPA 책"))
+                         .execute();
+```
+
+
+## 4.11 동적 쿼리
+
+- `com.mysema.query.BooleanBuilder`를 사용하면 특정 조건에 따른 동적 쿼리를 편하게 생성할 수 있다.
+
+```
+// 동적 쿼리 예제
+SearchParam param = new SearchParam();
+param.setName("시골개발자");
+param.setPrice(10000);
+
+QItem item = QItem.item;
+
+BooleanBuilder builder = new BooleanBuilder();
+if (StringUtils.hasText(param.getName())) {
+    builder.and(item.name.contains(param.getName()));
+}
+if (param.getPrice() != null) {
+    builder.and(item.price.gt(param.getPrice()));
+}
+List<Item> result = query.from(item)
+                         .where(builder)
+                         .list(item);
+```
+
+
+## 4.12 메서드 위임
+
+- 메서드 위임(Delegate methods) 기능을 사용하면 쿼리 타입에 검색 조건을 직접 정의할 수 있다.
+
+```java
+// 검색 조건 정의
+public class ItemExpression {
+    @QueryDelegate(Item.class)
+    public static BooleanExpression isExpensive(QItem item, Integer price) {
+        return item.price.gt(price);
+    }
+}
+```
+
+- 메서드 위임 기능을 사용하려면 먼저 정적 메서드를 만들고
+    - `@com.mysema.query.annotations.QueryDelegate` 애노테이션 속성으로 기능을 적용할 엔티티를 지정한다.
+- 정적 메서드의 첫 번째 파라미터에 대상 엔티티의 쿼리 타입(Q)을 지정하고 나머지는 필요한 파라미터를 정의한다.
+
+```java
+// 쿼리 타입에 이렇게 생성된다.
+public class QItem extends EntityPathBase<Item> {
+    // ...
+    public com.mysema.query.types.expr.BooleanExpression isExpensive(Integer price) {
+        return ItemExpression.isExpensive(this, price);
+    }
+}
+```
+
+- 위와 같이 쿼리 타입에 기능이 추가됐으면 아래와 같이 이용한다.
+
+```
+query.from(item).where(item.isExpensive(30000)).list(item);
+```
+
+- 필요하다면 `String`, `Date` 같은 자바 기본 내장 타입에도 메서드 위임 기능을 사용할 수 있다.
+
+```
+@QueryDelegate(String.class)
+public static BooleanExpression isHelloStart(StringPath stringPath) {
+    return stringPath.startsWith("Hello");
+}
+```
+
 -----
 [Home](./index.md)
